[package]
name = "async-stdin"
version = "0.3.1"
edition = "2021"
authors = ["Will Cygan <wcygan.io@gmail.com>"]
description = "Asynchronously read from stdin"
categories = ["asynchronous", "rust-patterns", "command-line-interface"]
keywords = ["io", "stdin", "input", "async", "asynchronous"]
repository = "https://github.com/wcygan/async-stdin"
homepage = "https://github.com/wcygan/async-stdin"
license = "MIT"
exclude = ["/.github"]

[dependencies]
tokio = { version = "1.27.0", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1.27.0", features = ["full"] }